Add nmi to interrupt addresses

--- a/boot.cfg
+++ b/boot.cfg
@@ -5,6 +5,6 @@ MEMORY {
 SEGMENTS {
 	CODE:       load = ROM, TYPE=ro;
 	DATA:       load = ROM, TYPE=rw, align=$0100;
-	VECTORS:    load = ROM, type=ro, start=$7FFC;
+	VECTORS:    load = ROM, type=ro, start=$7FFA;
 }
 
